Totalidad de estilos css listos para mobile sin tanto detalle

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <input class="formcontacto__input" type="email" name="email" placeholder="E-mail">
                         <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto">
                         <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontacto__botao">Enviar mensaje</button>
+                        <button type="submit" class="formcontacto__boton">Enviar mensaje</button>
                     </form>
                 </div>
             </div>
