--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img class="title__profile" src="assets/foto_perfil_cuadrada.jpg">
                         <h2 class="title__bio">Hola, mi nombre es Federico Pitton y diseño paginas web</h2>
                     </div>
-                    <h3 class="title__subsection">Soy estudiante de programacion en la Universidad Nacional Tecnologica
+                    <h3 class="title__subsection">Soy estudiante de programación en la Universidad Nacional Tecnológica
                         y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                     <ul class="title__network">
                         <!-- Pon los enlaces de tus redes sociales favoritas -->
@@ -86,7 +86,7 @@
                     trabajos anteriores. </p>
                 <p class="about__paragraph">Mi objetivo principal es desarrollarme profesionalmente y evolucionar en el
                     ambito de la programación, de modo que busco oportunidades que me permitan hacerlo, al tiempo que
-                    seguire capacitandome y adquiriendo nuevos conocimientos</p>
+                    seguire capacitandome y adquiriendo nuevos conocimientos.</p>
             </div>
         </section>
 
